Refactor codebase: replace .collect(toList) with .toList()